# This is an automake file for the GFDL AM4 model.
# This builds directory ./src/atmos_param.
#
# Ed Hartnett 2019-07-30

# Run make targets in each of these subdirs
SUBDIRS = dry_adj grey_radiation microphysics mg_drag cloud_generator betts_miller physics_driver rh_clouds cloud_rad diffusivity vert_diff strat_cloud lin_cloud_microphys physics_radiation_exch shallow_conv donner_deep aerosol_cloud vert_diff_driver cloud_obs diag_cloud_rad cloud_zonal moist_conv clouds diag_cloud lscale_cond two_stream_gray_rad ras cg_drag cu_mo_trans convection_driver stable_bl_turb cosp shallow_physics monin_obukhov qe_moist_convection diag_integral topo_drag lscloud_driver tke_turb edt entrain macrophysics vert_turb_driver shallow_cu moist_processes damping_driver radiation clubb my25_turb

